trunk/Archive2/cc/6c5b88822054f6/output
main.cpp:2:7: error: expected nested-name-specifier before 'name'
 using name std
       ^
